<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".connexion.ConnexionActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivAppAvatar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/orange" />

    <RelativeLayout
        android:gravity="center"
        android:layout_below="@+id/ivAppAvatar"
        android:layout_above="@+id/tvSignature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtvLogin"
            android:padding="20dp"
            android:hint="@string/votre_adresse_mail"
            android:background="@color/white"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="textEmailAddress"
            android:drawableEnd="@drawable/ic_action_login"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edtvMotdepasse"
            android:padding="20dp"
            android:layout_below="@+id/edtvLogin"
            android:hint="@string/votre_mot_de_passe"
            android:background="@color/white"
            android:inputType="textPassword"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:drawableEnd="@drawable/ic_action_lock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvMotDePasseOublie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtvMotdepasse"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/mot_de_passe_oubli"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btConnexion"
            android:layout_below="@+id/tvMotDePasseOublie"
            android:text="@string/connexion"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvNouveauCompte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btConnexion"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/cr_er_un_compte"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvSignature"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/deone_studio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>